// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui passing empty url 1`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"jumbotron\\">
        <h1>RSS Reader</h1>
        <p class=\\"lead\\">Start reading RSS today! It is easy, it is nicely.</p>
        <p class=\\"text-muted\\">https://ru.hexlet.io/lessons.rss</p>
        <form class=\\"form-inline rss-form\\">
            <div class=\\"form-group\\">
                <input type=\\"text\\" name=\\"url\\" class=\\"form-control\\" placeholder=\\"RSS link\\" style=\\"border-color: red;\\">
            </div>
            <button type=\\"submit\\" class=\\"btn btn-primary ml-1\\">Add</button>
        </form>
        <div class=\\"feedback text-danger\\">URL is required</div>
    </div>
    <div class=\\"row\\">
        <div class=\\"col rss-feeds\\"></div>
        <div class=\\"col rss-posts\\"></div>
    </div>
    <footer class=\\"footer\\">
        <p>© Hexlet Production</p>
    </footer>
</div>"
`;

exports[`ui passing invalid url 1`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"jumbotron\\">
        <h1>RSS Reader</h1>
        <p class=\\"lead\\">Start reading RSS today! It is easy, it is nicely.</p>
        <p class=\\"text-muted\\">https://ru.hexlet.io/lessons.rss</p>
        <form class=\\"form-inline rss-form\\">
            <div class=\\"form-group\\">
                <input type=\\"text\\" name=\\"url\\" class=\\"form-control\\" placeholder=\\"RSS link\\">
            </div>
            <button type=\\"submit\\" class=\\"btn btn-primary ml-1\\">Add</button>
        </form>
    </div>
    <div class=\\"row\\">
        <div class=\\"col rss-feeds\\"></div>
        <div class=\\"col rss-posts\\"></div>
    </div>
    <footer class=\\"footer\\">
        <p>© Hexlet Production</p>
    </footer>
</div>"
`;

exports[`ui passing invalid url 2`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"jumbotron\\">
        <h1>RSS Reader</h1>
        <p class=\\"lead\\">Start reading RSS today! It is easy, it is nicely.</p>
        <p class=\\"text-muted\\">https://ru.hexlet.io/lessons.rss</p>
        <form class=\\"form-inline rss-form\\">
            <div class=\\"form-group\\">
                <input type=\\"text\\" name=\\"url\\" class=\\"form-control\\" placeholder=\\"RSS link\\" value=\\"invalid url\\">
            </div>
            <button type=\\"submit\\" class=\\"btn btn-primary ml-1\\">Add</button>
        </form>
    </div>
    <div class=\\"row\\">
        <div class=\\"col rss-feeds\\"></div>
        <div class=\\"col rss-posts\\"></div>
    </div>
    <footer class=\\"footer\\">
        <p>© Hexlet Production</p>
    </footer>
</div>"
`;

exports[`ui passing invalid url 3`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"jumbotron\\">
        <h1>RSS Reader</h1>
        <p class=\\"lead\\">Start reading RSS today! It is easy, it is nicely.</p>
        <p class=\\"text-muted\\">https://ru.hexlet.io/lessons.rss</p>
        <form class=\\"form-inline rss-form\\">
            <div class=\\"form-group\\">
                <input type=\\"text\\" name=\\"url\\" class=\\"form-control\\" placeholder=\\"RSS link\\" value=\\"invalid url\\" style=\\"border-color: red;\\">
            </div>
            <button type=\\"submit\\" class=\\"btn btn-primary ml-1\\">Add</button>
        </form>
        <div class=\\"feedback text-danger\\">Invalid URL</div>
    </div>
    <div class=\\"row\\">
        <div class=\\"col rss-feeds\\"></div>
        <div class=\\"col rss-posts\\"></div>
    </div>
    <footer class=\\"footer\\">
        <p>© Hexlet Production</p>
    </footer>
</div>"
`;

exports[`ui valid url 1`] = `
"<div class=\\"container mt-5\\">
    <div class=\\"jumbotron\\">
        <h1>RSS Reader</h1>
        <p class=\\"lead\\">Start reading RSS today! It is easy, it is nicely.</p>
        <p class=\\"text-muted\\">https://ru.hexlet.io/lessons.rss</p>
        <form class=\\"form-inline rss-form\\">
            <div class=\\"form-group\\">
                <input type=\\"text\\" name=\\"url\\" class=\\"form-control\\" placeholder=\\"RSS link\\" value=\\"https://www.example.com/rss.xml\\">
            </div>
            <button type=\\"submit\\" class=\\"btn btn-primary ml-1\\">Add</button>
        </form>
        <div class=\\"feedback text-success\\">RSS has been loaded</div>
    </div>
    <div class=\\"row\\">
        <div class=\\"col rss-feeds\\">
            <ul>
                <li>
                    <div><b>Lorem ipsum feed</b>
                        <p style=\\"font-size: 14px;\\">This is a constantly updating lorem ipsum feed</p>
                    </div>
                </li>
            </ul>
        </div>
        <div class=\\"col rss-posts\\">
            <div><a href=\\"http://example.com/test/1587843840\\">Lorem ipsum 2020-04-25T19:44:00Z</a><br></div>
            <div><a href=\\"http://example.com/test/1587843780\\">Lorem ipsum 2020-04-25T19:43:00Z</a><br></div>
            <div><a href=\\"http://example.com/test/1587843720\\">Lorem ipsum 2020-04-25T19:42:00Z</a><br></div>
            <div><a href=\\"http://example.com/test/1587843660\\">Lorem ipsum 2020-04-25T19:41:00Z</a><br></div>
            <div><a href=\\"http://example.com/test/1587843600\\">Lorem ipsum 2020-04-25T19:40:00Z</a><br></div>
        </div>
    </div>
    <footer class=\\"footer\\">
        <p>© Hexlet Production</p>
    </footer>
</div>"
`;
